# stm32-cmake-device-l1

./: .gitignore  CMakeLists.txt
cmake/: toolchain-arm.cmake
lib/CMSIS/: CMakeLists.txt
lib/STM32L1xx_HAL_Driver/: CMakeLists.txt
lib/UCOS3/: CMakeLists.txt
src/: CMakeLists.txt  main.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h
src/controller/: main.c
src/startup/: startup_stm32l152retx.s
